footer gap fixed

--- a/src/pages/Bands.module.css
+++ b/src/pages/Bands.module.css
@@ -23,6 +23,10 @@
   background-color: #1e1e1e;
 }
 
+.overskrift h1 {
+  font-size: 4rem;
+}
+
 .card {
   position: relative;
   display: flex;
@@ -31,14 +35,14 @@
   align-items: center;
   width: 100%;
   max-width: 350px;
-  height: 250px; /* Set a fixed height for the cards */
+  height: 250px;
   border: 1px solid black;
   display: block;
 }
 
 .card img {
   display: block;
-  object-fit: cover; /* Ensure the image covers the entire container */
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -60,10 +64,12 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
+  font-family: "Lato", sans-serif;
 }
 
 .filterSort label {
   margin-right: -8rem;
+  color: #c99844;
 }
 
 .filterSort select {
@@ -103,20 +109,20 @@
 }
 
 .popupContent img {
-  width: 600px; /* Set a fixed width for the image */
-  height: auto; /* Allow the height to adjust based on the image's aspect ratio */
-  margin-right: 20px; /* Add some spacing between the image and text */
+  width: 600px;
+  height: auto;
+  margin-right: 20px;
 }
 
 .popupContent p {
-  flex-grow: 1; /* Allow the text section to take up remaining space */
+  flex-grow: 1;
   font-family: "Lato", sans-serif;
   text-align: left;
   margin-bottom: 10px;
 }
 .popupContent h3 {
   font-size: 1cm;
-  margin-bottom: 10px; /* Add some spacing below the heading */
+  margin-bottom: 10px;
 }
 
 .popupContent button {
@@ -127,7 +133,7 @@
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
-  margin-top: 10px; /* Add some spacing above the button */
+  margin-top: 10px;
   font-family: "Lato", sans-serif;
 }
 
