--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,12 +175,11 @@ footer img {
     justify-content: space-between;
     column-gap: 20px;
     margin-bottom: 50px;
-    padding-top: 50px;
+    padding-top: 90px;
   }
   .copy-right {
     color: var(--white);
     font-family: var(--font-sans);
-    padding-top: 50px;
   }
 }
 
